# Arrays

./: .editorconfig  .gitmodules  CMakeLists.txt  README.md  run_cmake.sh
benchmark/: CMakeLists.txt  benchmark.h  main.cpp
include/: SoA.h
include/detail/: SoA_detail.h
include/johl/: Allocator.h  ArrayRef.h  Arrays.h  SoA.h  utils.h
include/johl/detail/: Arrays.h  Arrays_internal.h  SoA_detail.h
include/johl/internal/: Arrays_internal.h
test/: CMakeLists.txt  main.cpp
